[build] update of user config, subjects, notificates, verifications